# coreapp/coreapp.go
@@ -196,6 +196,7 @@ func Configure(app *pocketbase.PocketBase, autoMigrate bool) {
 		authUser.POST("/signup", userhandler.SignUp)
 		authUser.POST("/check-in", userhandler.CheckIn).Bind(userhandler.RequireActiveUser())
 		authUser.GET("/visits", userhandler.GetMyVisits).Bind(userhandler.RequireActiveUser())
+		authUser.PUT("/countries", userhandler.UpdateCountries).Bind(userhandler.RequireActiveUser())
 		authUser.PUT("/visit-visibility", userhandler.UpdateVisitVisibility).Bind(userhandler.RequireActiveUser())
 		authUser.POST("/withdraw", userhandler.Withdraw)
 		authUser.GET("/report", arcadeadmin.ListUserReport).Bind(userhandler.RequireActiveUser())
